# jupyter-book-template

./: .buildinfo  .gitignore  .releaserc.json  Makefile  README.md  content.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  package-lock.json  package.json  pyproject.toml  search.html  searchindex.js
.github/workflows/: cd-deploy.yml  cd-release.yaml
_sources/: markdown-notebooks.ipynb
book/: _config.yml
docs/: CHANGELOG.md
