[tool.poetry]
name = "jupyter-book-template"
version = "1.0.3"
description = "A Template for Jupyter-Book with CI/CD workflows"
authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
license = "CC-BY-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.book.dependencies]
jupyter-book = "^0.13.2"
cookiecutter = "^2.1.1"
matplotlib = "^3.7.0"
numpy = "^1.24.2"
ghp-import = "^2.1.0"

[tool.poetry.group.lint.dependencies]
black = { extras = ["jupyter"], version = "^23.1.0" }
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
